<resources>
    <string name="app_name">Library App</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>
    <string name="back_to_main">Back  to Main</string>
    <string name="forgot_password_message">No worries! We\'ll send you reset instructions on your email.</string>
    <string name="back_to_log_in">Back to Log In</string>
    <string name="book_list">Book List</string>
    <string name="book_list_message">Here are the available books in the library.</string>
    <string name="hello_there">Hello there!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="borrow_books">Borrow Books</string>
    <string name="home">Home</string>
    <string name="title_search">Search</string>
    <string name="hello_there_name">Hello there, Name!</string>
    <string name="comics_list">Comics List</string>
    <string name="comics_list_message">Here are the list of available comics in the library</string>
    <string name="magazines_list">Magazines List</string>
    <string name="magazines_list_message">Here are the list of available magazines.</string>
    <string name="user_name">User Name</string>
    <string name="search_book">Search Book</string>
    <string name="transaction">Transaction</string>
    <string name="return_books">Return Books</string>
</resources>