<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/liberty">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="350dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgot_password_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/midnight_green_eagle_green"
                android:textSize="30sp"
                app:fontFamily="@font/nunito_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.053" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgot_password_multiline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_text_view"
                android:padding="5dp"
                android:fontFamily="@font/nunito_extrabold"
                android:inputType="textMultiLine"
                android:textAlignment="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/email_input_layout"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_multiline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/email_input_edit_text"
                    android:hint="@string/email"
                    android:fontFamily="@font/nunito_extrabold"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/send"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/back_to_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout"
                android:background="@drawable/button_design"
                android:text="@string/send"
                android:fontFamily="@font/nunito_extrabold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_to_main"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/send"
                android:background="@drawable/button_design"
                android:text="@string/back_to_log_in"
                android:fontFamily="@font/nunito_extrabold"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>