<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.librarylist.LibraryListFragment"
    android:background="@color/amaranth_pink"
    android:scrollbars="none"
   >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hello_there_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/hello_there_name"
        android:textAlignment="textStart"
        android:textColor="@color/skobeloff"
        android:textSize="38sp"
        app:fontFamily="@font/nunito_extrabold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:lines="2"
        android:layout_marginHorizontal="18dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/book_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hello_there_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="15dp"
        android:layout_weight="1"
        android:text="@string/book_list"
        android:textAlignment="textStart"
        android:textColor="@color/midnight_green_eagle_green"
        android:textSize="35sp"
        app:fontFamily="@font/nunito_extrabold"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/book_list_message"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/book_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/book_list_message"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textColor="@color/blanched_almond"
        android:inputType="textMultiLine"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/book_list_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blanched_almond"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_list_message">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/book_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="Hello World!"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/comics_list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/book_list_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="15dp"
        android:layout_weight="1"
        android:text="@string/comics_list"
        android:textAlignment="textStart"
        android:textColor="@color/midnight_green_eagle_green"
        android:textSize="35sp"
        app:fontFamily="@font/nunito_extrabold"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/comics_list_message"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/comics_list_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/comics_list_message"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textColor="@color/blanched_almond"
        android:inputType="textMultiLine"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/comics_list_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blanched_almond"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comics_list_message">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comics_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="Hello World!"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/magazines_list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/comics_list_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="15dp"
        android:layout_weight="1"
        android:text="@string/magazines_list"
        android:textAlignment="textStart"
        android:textColor="@color/midnight_green_eagle_green"
        android:textSize="35sp"
        app:fontFamily="@font/nunito_extrabold"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/magazines_list_message"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/magazines_list_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/magazines_list_message"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textColor="@color/blanched_almond"
        android:inputType="textMultiLine"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/magazines_list_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blanched_almond"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/magazines_list_message">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/magazines_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="Hello World!"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true" />
    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>